# itba-tp-final

./: README.md  pyproject.toml
itba-tp-final/: Dockerfile  docker-compose.yaml
itba-tp-final/dags/: flights_processing.py  user_processing.py
itba-tp-final/dags/scripts/: transformer.py  transformer_day.py
itba-tp-final/dags/sql/: inserts.sql
